--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -45,33 +45,33 @@
                     },
                     {
                         "id": 3,
-                        "title": "2018",
-                        "type": "고성능 시스템 반도체를 이용한 소형슈퍼컴퓨터 개발 국제공인 TPC 인증"
+                        "title": "",
+                        "type": ""
                     },
                     {
                         "id": 4,
-                        "title": "2017",
-                        "type": "대기전력 저감 우수제품 확인(한국에너지공단) 기술혁신대상"
+                        "title": "",
+                        "type": ""
                     },
                     {
                         "id": 5,
-                        "title": "2016",
-                        "type": "방송통신기자재등의 적합등록 필증 획득(국립전파연구원) (주)KT ds MOU 체결"
+                        "title": "",
+                        "type": ""
                     },
                     {
                         "id": 6,
                         "title": " 2015",
-                        "type": "IT 융합기업인상 수상(산업통상자원부) 한국특허기술상 대상(세종대왕상) 수상"
+                        "type": ""
                     },
                     {
                         "id": 12,
                         "title": "2010",
-                        "type": "국내 최초 PCI Interface Type의 Storage Board SSD 제품 상용화 개발 성공"
+                        "type": ""
                     },
                     {
                         "id": 7,
                         "title": "1996",
-                        "type": "회사 설립"
+                        "type": ""
                     }
                 ]
             },
@@ -96,18 +96,18 @@
                     },
                     {
                         "id": 3,
-                        "title": "1000개 기업 파트너 체결",
-                        "type": "정부"
+                        "title": "",
+                        "type": ""
                     },
                     {
                         "id": 4,
-                        "title": "250개 기업 파트너 추가 체결",
-                        "type": "시, 도, 현, 구"
+                        "title": "",
+                        "type": ""
                     },
                     {
                         "id": 5,
-                        "title": "50개 기업 파트너 추가 체결",
-                        "type": "금융, 통신"
+                        "title": "",
+                        "type": ""
                     }
                 ]
             },
